[package]
name = "aqi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.21.2", features = ["full"]} 
serde = {version = "1.0.147", features = ["derive"]}
structopt = "0.3.26"
serde_json = "1.0.87"
reqwest = {version = "0.11.12", features = ["json"]}
color-eyre = "0.6.2"
Inflector = {version="0.11.4", default-features=false}
